# adjoint-PETSc

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  hello_world.cpp
include/adjoint_petsc/: ksp.h  mat.h  options.h  vec.h
include/adjoint_petsc/util/: addata_helper.hpp  base.hpp  codi_def.hpp  dyadic_product_helper.hpp  mat_iterator_util.hpp  petsc_missing.h  wrapper_array.hpp
src/adjoint_petsc/: ksp.cpp  mat.cpp  options.cpp  vec.cpp
src/adjoint_petsc/impl/: ad_mat_data.cpp  ad_mat_data.h  ad_vec_data.cpp  ad_vec_data.h
src/adjoint_petsc/util/: addata_helper.cpp  addata_helper.hpp  dyadic_product_helper.hpp  exception.hpp  mat_iterator_util.hpp  petsc_missing.cpp  vec_iterator_util.hpp
tests/: CMakeLists.txt  main_test.cpp  test_ksp.cpp  test_mat.cpp  test_vec.cpp
tests/setups/: ksp_setup.hpp  mat_setup.hpp  vec_setup.hpp
